--- a/index.html
+++ b/index.html
@@ -152,21 +152,21 @@
           <div class="home__content grid">
             <div class="home__social">
               <a
-                href="https://www.linkedin.com/in/rawatanimesh/"
+                href="https://www.linkedin.com/in/titiloye-paul-018962250"
                 target="_blank"
                 class="home__social-icon"
               >
                 <i class="uil uil-linkedin-alt"></i>
               </a>
               <a
-                href="https://github.com/rawatanimesh"
+                href="https://github.com/ohanronnie"
                 target="_blank"
                 class="home__social-icon"
               >
                 <i class="uil uil-github-alt"></i>
               </a>
               <a
-                href="https://t.me/rawatanimesh"
+                href="https://t.me/ronnie_paul"
                 target="_blank"
                 class="home__social-icon"
               >
