--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   </head>
 
   <body>
@@ -199,7 +200,8 @@
                   <image
                     class="home__blob-img"
                     x="-20"
-                    xlink:href="/assets/img/img1.png"
+                    xlink:href="/assets/img/IMG_20230426_133140_h
+                    h980.jpg"
                   ></image>
                 </g>
               </svg>
@@ -236,7 +238,7 @@
       <span class="section__subtitle">My Introduction</span>
 
       <div class="about__container container grid">
-        <img src="/assets/img/img5.png" alt="" class="about__image" />
+        <img src="/assets/img/IMG_20230426_133140_980.jpg" alt="" class="about__image" />
 
         <div class="about__data">
           <p class="about__description">
@@ -742,7 +744,7 @@
             </a>
           </div>
 
-          <img src="/assets/img/img5.png" alt="" class="project__img" />
+          <img src="/assets/img/ei_1682513859219-removebg-preview.png" alt="" class="project__img" />
         </div>
       </div>
     </section>
