--- a/index.html
+++ b/index.html
@@ -243,8 +243,7 @@
         <div class="about__data">
           <p class="about__description">
             I have 2 years of experience and a deep understanding of various
-            web technologies such as HTML, CSS, JavaScript, TypeScript, ReactJS, NodeJS, ExpressJS, MongoDB, Socket.io and
-            MERN <br />
+            web technologies such as HTML, CSS, JavaScript, TypeScript, ReactJS, NodeJS, ExpressJS, NestJS, PostgreSQL, Typeorm, MongoDB and Socket.io <br />
             I am dedicated to keeping up with the latest trends and techniques
             in web development, and I am constantly learning and expanding my
             skill set. I have a keen eye for detail and strive for perfection in
@@ -262,7 +261,7 @@
             </div>
 
             <div>
-              <span class="about__info-title">20+</span>
+              <span class="about__info-title">5+</span>
               <span class="about__info-name"
                 >Projects <br />
                 completed</span
@@ -270,7 +269,7 @@
             </div>
 
             <div>
-              <span class="about__info-title">04+</span>
+              <span class="about__info-title">02+</span>
               <span class="about__info-name"
                 >Companies <br />
                 worked</span
@@ -376,6 +375,30 @@
             alt="firebase"
           />
           <div class="skills__container-name">MongoDB</div>
+        </div>
+        <div class="skills__container-box">
+          <img
+            class="skills__container-img"
+            src="/assets/img/skills/postgres.png"
+            alt="firebase"
+          />
+          <div class="skills__container-name">PostgreSQL</div>
+        </div>
+        <div class="skills__container-box">
+          <img
+            class="skills__container-img"
+            src="/assets/img/skills/typeorm.png"
+            alt="firebase"
+          />
+          <div class="skills__container-name">Typeorm</div>
+        </div>
+        <div class="skills__container-box">
+          <img
+            class="skills__container-img"
+            src="/assets/img/skills/nestjs.png"
+            alt="firebase"
+          />
+          <div class="skills__container-name">NestJS</div>
         </div>
 
         <!-- <div class="skills__container-box">
@@ -531,7 +554,7 @@
         <div class="services__content">
           <div>
             <i class="uil uil-arrow services__icon"></i>
-            <h3 class="services__title">Web<br />Developer</h3>
+            <h3 class="services__title">Frontend<br />Developer</h3>
           </div>
 
           <span
@@ -543,7 +566,7 @@
 
           <div class="services__modal">
             <div class="services__modal-content">
-              <h4 class="services__modal-title">Web<br />Developer</h4>
+              <h4 class="services__modal-title">Front end<br />Developer</h4>
               <i class="uil uil-times services__modal-close"></i>
               <ul class="services__modal-services grid">
                 <li class="services__modal-service">
@@ -574,7 +597,7 @@
         <div class="services__content">
           <div>
             <i class="uil uil-mobile-android services__icon"></i>
-            <h3 class="services__title">Full stack<br />Developer</h3>
+            <h3 class="services__title">Backend<br />Developer</h3>
           </div>
 
           <span
@@ -586,7 +609,7 @@
 
           <div class="services__modal">
             <div class="services__modal-content">
-              <h4 class="services__modal-title">Full stack<br />Developer</h4>
+              <h4 class="services__modal-title">Backend<br />Developer</h4>
               <i class="uil uil-times services__modal-close"></i>
               <ul class="services__modal-services grid">
                 <li class="services__modal-service">
@@ -596,6 +619,10 @@
                 <li class="services__modal-service">
                   <i class="uil uil-check-circle services__modal-icon"></i>
                   <p>I develop the back end portions of websites</p>
+                </li>
+                <li class="services__modal-service">
+                  <i class="uil uil-check-circle services__modal-icon"></i>
+                  <p>I develop powerful REST API's with various technologies</p>
                 </li>
               <!--  <li class="services__modal-service">
                   <i class="uil uil-check-circle services__modal-icon"></i>
@@ -623,7 +650,28 @@
           <!--==================== PORTFOLIO 1====================-->
           <div class="portfolio__content grid swiper-slide">
             <img
-              src="/assets/img/portfolio/chats.jpg"
+              src="/assets/img/portfolio/chats1.png"
+              alt=""
+              class="portfolio__img"
+            />
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">Chat Application</h3>
+              <p class="portfolio__description">
+                Chat app created using react, expressjs, nodejs, mongodb and socket.io.
+              </p>
+              <a
+                href="https://chats-sphere.netlify.app"
+                target="_blank"
+                class="button button--flex button--small portfolio__button"
+              >
+                Demo
+                <i class="uil uil-arrow-right button__icon"></i>
+              </a>
+            </div>
+          </div>
+        <div class="portfolio__content grid swiper-slide">
+            <img
+              src="/assets/img/portfolio/chats2.png"
               alt=""
               class="portfolio__img"
             />
@@ -633,7 +681,92 @@
                 Chat app created using react, nodejs, mongodb and socket.io.
               </p>
               <a
-                href="https://chat-sphere.netlify.app"
+                href="https://chats-sphere.netlify.app"
+                target="_blank"
+                class="button button--flex button--small portfolio__button"
+              >
+                Demo
+                <i class="uil uil-arrow-right button__icon"></i>
+              </a>
+            </div>
+          </div>
+        <div class="portfolio__content grid swiper-slide">
+            <img
+              src="/assets/img/portfolio/chats3.png"
+              alt=""
+              class="portfolio__img"
+            />
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">Chat Application</h3>
+              <p class="portfolio__description">
+                Chat app created using react, nodejs, mongodb and socket.io.
+              </p>
+              <a
+                href="https://chats-sphere.netlify.app"
+                target="_blank"
+                class="button button--flex button--small portfolio__button"
+              >
+                Demo
+                <i class="uil uil-arrow-right button__icon"></i>
+              </a>
+            </div>
+          </div>
+
+        <div class="portfolio__content grid swiper-slide">
+            <img
+              src="/assets/img/portfolio/media1.png"
+              alt=""
+              class="portfolio__img"
+            />
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">Social Media App</h3>
+              <p class="portfolio__description">
+                Social media app created with nestjs, typeorm, postgresql and reactjs
+              </p>
+              <a
+                href="https://connect-hub.netlify.app"
+                target="_blank"
+                class="button button--flex button--small portfolio__button"
+              >
+                Demo
+                <i class="uil uil-arrow-right button__icon"></i>
+              </a>
+            </div>
+          </div>
+        <div class="portfolio__content grid swiper-slide">
+            <img
+              src="/assets/img/portfolio/media2.png"
+              alt=""
+              class="portfolio__img"
+            />
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">Social Media App</h3>
+              <p class="portfolio__description">
+                Social media app created with nestjs, typeorm, postgresql and reactjs
+              </p>
+              <a
+                href="https://connect-hub.netlify.app"
+                target="_blank"
+                class="button button--flex button--small portfolio__button"
+              >
+                Demo
+                <i class="uil uil-arrow-right button__icon"></i>
+              </a>
+            </div>
+          </div>
+        <div class="portfolio__content grid swiper-slide">
+            <img
+              src="/assets/img/portfolio/media3.png"
+              alt=""
+              class="portfolio__img"
+            />
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">Social Media App</h3>
+              <p class="portfolio__description">
+                Social media app created with nestjs, typeorm, postgresql and reactjs
+              </p>
+              <a
+                href="https://connect-hub.netlify.app"
                 target="_blank"
                 class="button button--flex button--small portfolio__button"
               >
